# prod-evals-cookbook

./: .gitignore  README.md  START_HERE.md  pyproject.toml
setup_agent/: README.md  config.py  demo.ipynb  eval_checks.py  mcp_tools.py  orchestrator.py  sql_agent.py  vector_search.py
setup_environment/: Dockerfile  README.md  docker-compose.yml  env.example  verify_setup.py
setup_seed_data/: README.md  seed_all.py
setup_seed_data/documents/engineering/: code_review_standards.md  incident_runbook.md  oncall_handbook.md
setup_seed_data/documents/policies/: pto_policy.md  refund_policy.md  remote_work_policy.md
setup_seed_data/documents/product/: pricing_strategy.md  roadmap_2025.md
setup_seed_data/mcp_fixtures/: jira_tickets.json  slack_messages.json
setup_seed_data/postgres/: schema.sql  seed_data.sql
stage_1_golden_sets/: README.md  evaluator.py  golden_data.yaml  walkthrough.ipynb
stage_2_labeled_scenarios/: README.md  evaluator.py  scenarios.yaml  walkthrough.ipynb
stage_3_replay_harnesses/: README.md  evaluator.py  metrics.py  player.py  recorder.py  walkthrough.ipynb
stage_3_replay_harnesses/fixtures/: Whatsourrefundpo_20260113_221437.json  example_refund_policy.json
stage_4_rubrics/: README.md  evaluator.py  rubric_config.py  rubrics.yaml  scorer.py  walkthrough.ipynb
stage_5_experiments/: README.md  reporter.py  runner.py  variants.yaml  walkthrough.ipynb
stage_5_experiments/prompts/: v1.txt  v2.txt
